--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
     "next": "15.1.6",
     "react": "^19.0.0",
